[gd_scene load_steps=13 format=1]

[ext_resource path="res://entities/enemy/enemy_base.gd" type="Script" id=1]
[ext_resource path="res://default_shader.tres" type="Shader" id=2]
[ext_resource path="res://gfx/k2x/spaceships_009.normal.png" type="Texture" id=3]
[ext_resource path="res://gfx/k2x/spaceships_009.png" type="Texture" id=4]
[ext_resource path="res://gfx/k2x/spaceeffects_008.png" type="Texture" id=5]
[ext_resource path="res://entities/enemy/enemy_sfx.tres" type="SampleLibrary" id=6]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 17.7777, -25.5486, 27.0335, -22.9855, 35.15, 5.06648, 19.0593, 25.8563, -18.6756, 25.8563, -35.1935, 5.20888, -26.9345, -22.9855, -18.2484, -25.4062 )

[sub_resource type="ColorRamp" id=2]

offsets = FloatArray( 0, 0.285714, 0.766234, 1 )
colors = ColorArray( 1, 0, 0, 1, 0.921875, 1, 0, 1, 0.43792, 0.18219, 0.777344, 1, 0.210938, 0.24176, 1, 1 )

[sub_resource type="CanvasItemMaterial" id=3]

shader/shader = ExtResource( 2 )
shader/shading_mode = 0
shader_param/BLINKING_SPEED = 0.0
shader_param/normal = ExtResource( 3 )

[sub_resource type="ColorRamp" id=4]

offsets = FloatArray( 0, 1 )
colors = ColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Animation" id=5]

resource/name = "EngineBurn"
length = 0.2
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2 ),
"transitions": FloatArray( 1, -4, 1 ),
"update": 0,
"values": [ 1.0, 0.4, 1.0 ]
}

[sub_resource type="ConvexPolygonShape2D" id=6]

custom_solver_bias = 0.0
points = Vector2Array( 17.7777, -25.5486, 27.0335, -22.9855, 35.15, 5.06648, 19.0593, 25.8563, -18.6756, 25.8563, -35.1935, 5.20888, -26.9345, -22.9855, -18.2484, -25.4062 )

[node name="EnemyBase" type="KinematicBody2D" groups=[
"enemies",
]]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 2
collision/mask = 0
collision/margin = 0.08
script/script = ExtResource( 1 )
personality = "Random"
drop = "Nothing"
drop_value = 10
speed_min = 1.0
speed_max = 2.0
course_time_min = 5.0
course_time_max = 15.0
acceleration = 0.6
HP = 1
kill_score = 10
fire_rate_min = 0.5
fire_rate_max = 1.5
bullets_left = -1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

visibility/visible = false
build_mode = 0
polygon = Vector2Array( -18.2484, -25.4062, -26.9345, -22.9855, -35.1935, 5.20888, -18.6756, 25.8563, 19.0593, 25.8563, 35.15, 5.06648, 27.0335, -22.9855, 17.7777, -25.5486 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="DeathEffect" type="Particles2D" parent="."]

visibility/behind_parent = true
transform/scale = Vector2( 0.999997, 0.999997 )
config/amount = 64
config/lifetime = 1.46025
config/emit_timeout = 1.0
config/emitting = false
config/process_mode = 1
config/local_space = false
config/explosiveness = 0.15
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 90.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.1
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 6.0
params/tangential_accel = 0.0
params/damping = 26.257
params/initial_angle = 0.0
params/initial_size = 5.0
params/final_size = 0.75
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spread = 0.41
randomness/linear_velocity = -0.26
randomness/radial_accel = 0.71
randomness/damping = 0.61
randomness/initial_size = 1.0
color/color = Color( 0, 0, 0, 1 )
color/color_ramp = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

material/material = SubResource( 3 )
transform/scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 4 )

[node name="FlowEffect" type="Particles2D" parent="Sprite"]

visibility/behind_parent = true
transform/scale = Vector2( 1.33333, 1.33333 )
config/amount = 64
config/lifetime = 3.0
config/process_mode = 1
config/half_extents = Vector2( 24, 3 )
config/local_space = false
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 180.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.7
params/initial_angle = 0.0
params/initial_size = 1.5
params/final_size = 5.25
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/linear_velocity = 0.22
randomness/damping = 0.51
randomness/initial_size = 0.25
randomness/final_size = 0.22
color/color_ramp = SubResource( 4 )

[node name="Engine" type="Node2D" parent="Sprite"]

visibility/behind_parent = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite/Engine"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/EngineBurn = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="EngineR" type="Sprite" parent="Sprite/Engine"]

visibility/behind_parent = true
transform/pos = Vector2( -40, -113.532 )
transform/rot = -180.0
transform/scale = Vector2( 1, 0.540506 )
texture = ExtResource( 5 )

[node name="EngineL" type="Sprite" parent="Sprite/Engine"]

visibility/behind_parent = true
transform/pos = Vector2( 40, -113.532 )
transform/rot = -180.0
transform/scale = Vector2( 1, 0.540506 )
texture = ExtResource( 5 )

[node name="CourseTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="SamplePlayer" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 5
config/samples = ExtResource( 6 )
config/pitch_random = 0.0

[node name="HitBox" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false
collision/layers = 2
collision/mask = 9

[node name="HitBoxCollision" type="CollisionPolygon2D" parent="HitBox"]

visibility/visible = false
build_mode = 0
polygon = Vector2Array( -18.2484, -25.4062, -26.9345, -22.9855, -35.1935, 5.20888, -18.6756, 25.8563, 19.0593, 25.8563, 35.15, 5.06648, 27.0335, -22.9855, 17.7777, -25.5486 )
shape_range = Vector2( 0, 0 )
trigger = false

[connection signal="timeout" from="CourseTimer" to="." method="_on_CourseTimer_timeout"]

[connection signal="body_enter" from="HitBox" to="." method="_on_Area2D_body_enter"]


